Fix contrast issues between captions and images
Fixed the contrast issues between captions and images on the image carousel in index.html.

Also fixed the contrast of the arrow buttons.

--- a/styles/indexstylesheet.css
+++ b/styles/indexstylesheet.css
@@ -11,11 +11,6 @@ body {
   margin: auto;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -25,17 +20,20 @@ body {
   margin-top: -22px;
   padding: 16px;
   color: white;
+  background-color: black;
+  opacity: 50%;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 30px;
   user-select: none;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -44,23 +42,30 @@ body {
 }
 
 /* Caption text */
-.text {
-  color: #f2f2f2;
+.carouseltext {
+  color: white;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
+  background-color: black;
+  opacity: 50%;
+  border-radius: 5px;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: white;
+  background-color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
+  opacity: 0.5;
+  margin: 5px;
+  border-radius: 5px;
 }
 
 /* The dots/bullets/indicators */
